KC : D Resize button to fix collapse

--- a/client/src/app/components/sidebar-tools/sidebar-tools.component.scss
+++ b/client/src/app/components/sidebar-tools/sidebar-tools.component.scss
@@ -12,19 +12,29 @@
 }
 
 #tools-buttons {
-    width: 60px;
+    width: 35px;
     height: 100vh;
 
     mat-button-toggle-group {
-        width: 59px;
+        width: 35px;
     }
 }
 
-#file-buttons{
+#file-buttons {
     position: fixed;
     bottom: 0;
-    
+
     .mat-button-toggle-checked {
         background: #ffffff;
+    }
+}
+
+.mat-button-toggle {
+    width: 35px;
+    height: 35px;
+    border: none;
+
+    i {
+        font-size: 75%;
     }
 }
