--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -7,3 +7,8 @@ body {
     background-color: #e0e0e0;
     background-image: url(./assets/paper.jpg);
 }
+
+.mat-button-toggle-label-content {
+    line-height: 0px !important;
+    padding: 12px 10px 10px 10px !important;
+}
